--- a/src/main/resources/templates/users/signup.html
+++ b/src/main/resources/templates/users/signup.html
@@ -15,6 +15,7 @@
                 <label class="db fw6 lh-copy f6" for="username">Username</label>
                 <input class="pa2 input-reset ba w-100" type="text" name="username" id="username">
                 <p class="f6 red mt1" th:if="${errors != null and errors.get('username') != null}" th:text="${errors.get('username')}"></p>
+                <p class="f6 red mt1" th:if="${error != null}" th:text="${error}"></p>
             </div>
             <div class="mt3">
                 <label class="db fw6 lh-copy f6" for="password">Password</label>
