Resolved multiple image having same title issue

--- a/src/main/resources/templates/images/edit.html
+++ b/src/main/resources/templates/images/edit.html
@@ -8,9 +8,10 @@
 
 <body class="sans-serif">
 <main class="pa4 black-80">
-    <form method="POST" enctype="multipart/form-data" action="/editImage" class="measure center">
+    <form method="POST" enctype="multipart/form-data" action="/editImage/" class="measure center">
         <fieldset id="sign_up" class="ba b--transparent ph0 mh0">
             <legend class="f2 fw6 ph0 mh0">Edit image</legend>
+            <input class="gray bg-light-gray pa2 input-reset ba w-100" type="hidden" name="id"  th:value="${image.id}" />
             <div class="mt3">
                 <label class="db fw6 lh-copy f6" for="disabledTitle">Title</label>
                 <input class="gray bg-light-gray pa2 input-reset ba w-100" type="text" name="disabledTitle" id="disabledTitle" th:value="${image.title}" disabled />
