Updated the functionality such that image is retreived using the id instead of title.Updated image url to include id.

--- a/src/main/resources/templates/users/signup.html
+++ b/src/main/resources/templates/users/signup.html
@@ -14,12 +14,12 @@
             <div class="mt3">
                 <label class="db fw6 lh-copy f6" for="username">Username</label>
                 <input class="pa2 input-reset ba w-100" type="text" name="username" id="username">
-                <p class="f6 red mt1" th:if="${errors != null and errors.get('username') != null}" th:text="${errors.get('username')}"></p>
+                <p class="f6 red mt1" th:if="${error != null}">"Username already exits!"</p>
             </div>
             <div class="mt3">
                 <label class="db fw6 lh-copy f6" for="password">Password</label>
                 <input class="pa2 input-reset ba w-100" type="password" name="password" id="password">
-                <p class="f6 red mt1" th:if="${errors != null and errors.get('password') != null}" th:text="${errors.get('password')}"></p>
+
             </div>
         </fieldset>
         <div class="mt3">
